# virtual_tryon_system

./: .gitignore  Dockerfile  PROJECT_WORKFLOW.md  README.md  README_GIT.md  app.py  packages.txt  pyproject.toml  requirements.txt  vton.ipynb
examples/: basic_inference.py
scripts/: debug_masks.py  download_weights.py
src/fashn_vton/: __init__.py  pipeline.py  tryon_mmdit.py
src/fashn_vton/dwpose/: __init__.py  dwpose.py  onnxdet.py  onnxpose.py  utils.py  wholebody.py
src/fashn_vton/preprocessing/: __init__.py  agnostic.py  garment_length.py  masks.py  sleeves.py  transforms.py
src/fashn_vton/utils/: __init__.py  checkpoint.py  common.py  keypoints.py  logger.py  sampling.py  tensor.py
tests/: test_pose_shapes.py
